Fixed issue with table hover overflow hidden

--- a/src/assets/css/networth/networth.scss
+++ b/src/assets/css/networth/networth.scss
@@ -1249,10 +1249,14 @@ a.upgrader-btn {
 .table-holder .table tfoot td:first-child {
   font-weight: 600;
   color: $black;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 400px;
+  max-width: 300px;
+
+  span {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+  }
 }
 
 .table-holder .table.account tbody td:first-child {
